@@ -17,7 +17,8 @@ Features under a numbered section are complete and available in the Wrest gem.
  * Ensure Components::Container is ActiveModel compliant
 
 == Current
-
+ * GH#34 Wrest::Uri extensions swallow existing path
+ 
 == 1.0.0.beta3
  * GH#13 Works for get and delete with parameters appended to the uri string and 
    with ? and no parameters appended to the uri string
